{
  "version": 4,
  "terraform_version": "1.7.3",
  "serial": 1331,
  "lineage": "fcab1aab-6550-0f58-7dc9-8f6ab0742181",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-094afefcd3af585d6",
            "domain": "vpc",
            "id": "eipalloc-094afefcd3af585d6",
            "network_border_group": "eu-central-1",
            "public_dns": "ec2-3-65-184-207.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.65.184.207",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:381492187662:internet-gateway/igw-08af3352cfd076c6c",
            "id": "igw-08af3352cfd076c6c",
            "owner_id": "381492187662",
            "tags": {
              "Name": "stack-3tier-igw"
            },
            "tags_all": {
              "Name": "stack-3tier-igw"
            },
            "vpc_id": "vpc-09f2639068eea4a81"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb-app-tier",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:381492187662:loadbalancer/app/stack-3tier-alb-app/ea97c6289790bb2b",
            "arn_suffix": "app/stack-3tier-alb-app/ea97c6289790bb2b",
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-stack-3tier-alb-app-516043170.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:381492187662:loadbalancer/app/stack-3tier-alb-app/ea97c6289790bb2b",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "stack-3tier-alb-app",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0a71af9a4e8a6d99d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-08e9caeb3efa69ebf"
              },
              {
                "subnet_id": "subnet-0eaff904d64422625"
              }
            ],
            "subnets": [
              "subnet-08e9caeb3efa69ebf",
              "subnet-0eaff904d64422625"
            ],
            "vpc_id": "vpc-09f2639068eea4a81",
            "xff_header_processing_mode": "append",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "aws_security_group.alb-app-tier-sg",
            "aws_security_group.alb-web-tier-sg",
            "aws_security_group.asg-web-tier-sg",
            "aws_subnet.app-tier-subnet-one",
            "aws_subnet.app-tier-subnet-two",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb-web-tier",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:381492187662:loadbalancer/app/stack-3tier-alb-web/32025a979363296b",
            "arn_suffix": "app/stack-3tier-alb-web/32025a979363296b",
            "desync_mitigation_mode": "defensive",
            "dns_name": "stack-3tier-alb-web-1138654140.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:381492187662:loadbalancer/app/stack-3tier-alb-web/32025a979363296b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "stack-3tier-alb-web",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0d5523e887d486ca4"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0092212d2a9f5aeab"
              },
              {
                "subnet_id": "subnet-01e8651201e859f08"
              }
            ],
            "subnets": [
              "subnet-0092212d2a9f5aeab",
              "subnet-01e8651201e859f08"
            ],
            "vpc_id": "vpc-09f2639068eea4a81",
            "xff_header_processing_mode": "append",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "aws_security_group.alb-web-tier-sg",
            "aws_subnet.web-tier-subnet-one",
            "aws_subnet.web-tier-subnet-two",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb-app-tier-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:381492187662:listener/app/stack-3tier-alb-app/ea97c6289790bb2b/d8058ff466d2f3a9",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:381492187662:targetgroup/stack-3tier-tg-app/886eac699d0f03da",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:381492187662:listener/app/stack-3tier-alb-app/ea97c6289790bb2b/d8058ff466d2f3a9",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:381492187662:loadbalancer/app/stack-3tier-alb-app/ea97c6289790bb2b",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.alb-app-tier",
            "aws_lb_target_group.alb-app-tier-tg",
            "aws_security_group.alb-app-tier-sg",
            "aws_security_group.alb-web-tier-sg",
            "aws_security_group.asg-web-tier-sg",
            "aws_subnet.app-tier-subnet-one",
            "aws_subnet.app-tier-subnet-two",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb-web-tier-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:381492187662:listener/app/stack-3tier-alb-web/32025a979363296b/08f0d699edb620d0",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:381492187662:targetgroup/stack-3tier-tg-web/11fe99c56c5c50ac",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:381492187662:listener/app/stack-3tier-alb-web/32025a979363296b/08f0d699edb620d0",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:381492187662:loadbalancer/app/stack-3tier-alb-web/32025a979363296b",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.alb-web-tier",
            "aws_lb_target_group.alb-web-tier-tg",
            "aws_security_group.alb-web-tier-sg",
            "aws_subnet.web-tier-subnet-one",
            "aws_subnet.web-tier-subnet-two",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb-app-tier-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:381492187662:targetgroup/stack-3tier-tg-app/886eac699d0f03da",
            "arn_suffix": "targetgroup/stack-3tier-tg-app/886eac699d0f03da",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:381492187662:targetgroup/stack-3tier-tg-app/886eac699d0f03da",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "stack-3tier-tg-app",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-09f2639068eea4a81"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb-web-tier-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:381492187662:targetgroup/stack-3tier-tg-web/11fe99c56c5c50ac",
            "arn_suffix": "targetgroup/stack-3tier-tg-web/11fe99c56c5c50ac",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:381492187662:targetgroup/stack-3tier-tg-web/11fe99c56c5c50ac",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "stack-3tier-tg-web",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-09f2639068eea4a81"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-094afefcd3af585d6",
            "association_id": "eipassoc-01e3134380dc0f6a5",
            "connectivity_type": "public",
            "id": "nat-02a40e5f566557f11",
            "network_interface_id": "eni-020220ae3e6c990d1",
            "private_ip": "10.0.1.68",
            "public_ip": "3.65.184.207",
            "subnet_id": "subnet-0092212d2a9f5aeab",
            "tags": {
              "Name": "stack-3tier-nat-gw"
            },
            "tags_all": {
              "Name": "stack-3tier-nat-gw"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw",
            "aws_subnet.web-tier-subnet-one",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:381492187662:route-table/rtb-0b4f5cf3a701cfdd9",
            "id": "rtb-0b4f5cf3a701cfdd9",
            "owner_id": "381492187662",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-02a40e5f566557f11",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "stack-3tier-private-route-table"
            },
            "tags_all": {
              "Name": "stack-3tier-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-09f2639068eea4a81"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat-gw",
            "aws_subnet.web-tier-subnet-one",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:381492187662:route-table/rtb-0f60285acd2a75a9a",
            "id": "rtb-0f60285acd2a75a9a",
            "owner_id": "381492187662",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08af3352cfd076c6c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "stack-3tier-public-route-table"
            },
            "tags_all": {
              "Name": "stack-3tier-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-09f2639068eea4a81"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-route-association-one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04b054283ba98ad86",
            "route_table_id": "rtb-0b4f5cf3a701cfdd9",
            "subnet_id": "subnet-08e9caeb3efa69ebf"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat-gw",
            "aws_route_table.private-route-table",
            "aws_subnet.app-tier-subnet-one",
            "aws_subnet.web-tier-subnet-one",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-route-association-two",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08cdd46fea027b0a8",
            "route_table_id": "rtb-0b4f5cf3a701cfdd9",
            "subnet_id": "subnet-0eaff904d64422625"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat-gw",
            "aws_route_table.private-route-table",
            "aws_subnet.app-tier-subnet-two",
            "aws_subnet.web-tier-subnet-one",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-route-association-one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dcf01cd2078cc1ac",
            "route_table_id": "rtb-0f60285acd2a75a9a",
            "subnet_id": "subnet-0092212d2a9f5aeab"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public-route-table",
            "aws_subnet.web-tier-subnet-one",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-route-association-two",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e49c1a484e4cae0f",
            "route_table_id": "rtb-0f60285acd2a75a9a",
            "subnet_id": "subnet-01e8651201e859f08"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public-route-table",
            "aws_subnet.web-tier-subnet-two",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-app-tier-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:381492187662:security-group/sg-0a71af9a4e8a6d99d",
            "description": "Application Load Balancer Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a71af9a4e8a6d99d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0596742eb6dab82c9"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0596742eb6dab82c9"
                ],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0596742eb6dab82c9"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "stack-3tier-alb-sg-app",
            "name_prefix": "",
            "owner_id": "381492187662",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "stack-3tier-alb-sg-app"
            },
            "tags_all": {
              "Name": "stack-3tier-alb-sg-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-09f2639068eea4a81"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb-web-tier-sg",
            "aws_security_group.asg-web-tier-sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-web-tier-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:381492187662:security-group/sg-0d5523e887d486ca4",
            "description": "Application Load Balancer Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d5523e887d486ca4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "stack-3tier-alb-sg-web",
            "name_prefix": "",
            "owner_id": "381492187662",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "stack-3tier-alb-sg-web"
            },
            "tags_all": {
              "Name": "stack-3tier-alb-sg-web"
            },
            "timeouts": null,
            "vpc_id": "vpc-09f2639068eea4a81"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "asg-app-tier-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:381492187662:security-group/sg-0f693104d645f9cdf",
            "description": "Auto Scaling Group Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f693104d645f9cdf",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a71af9a4e8a6d99d"
                ],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a71af9a4e8a6d99d"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "stack-3tier-asg-sg-app",
            "name_prefix": "",
            "owner_id": "381492187662",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "stack-3tier-asg-sg-app"
            },
            "tags_all": {
              "Name": "stack-3tier-asg-sg-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-09f2639068eea4a81"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb-app-tier-sg",
            "aws_security_group.alb-web-tier-sg",
            "aws_security_group.asg-web-tier-sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "asg-web-tier-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:381492187662:security-group/sg-0596742eb6dab82c9",
            "description": "Auto Scaling Group Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0596742eb6dab82c9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d5523e887d486ca4"
                ],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d5523e887d486ca4"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "stack-3tier-asg-sg-web",
            "name_prefix": "",
            "owner_id": "381492187662",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "stack-3tier-asg-sg-web"
            },
            "tags_all": {
              "Name": "stack-3tier-asg-sg-web"
            },
            "timeouts": null,
            "vpc_id": "vpc-09f2639068eea4a81"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb-web-tier-sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db-tier-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:381492187662:security-group/sg-0a2c8c8bdf19c3c8f",
            "description": "Database Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a2c8c8bdf19c3c8f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f693104d645f9cdf"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "stack-3tier-db-sg",
            "name_prefix": "",
            "owner_id": "381492187662",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "stack-3tier-db-sg"
            },
            "tags_all": {
              "Name": "stack-3tier-db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09f2639068eea4a81"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb-app-tier-sg",
            "aws_security_group.alb-web-tier-sg",
            "aws_security_group.asg-app-tier-sg",
            "aws_security_group.asg-web-tier-sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app-tier-subnet-one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:381492187662:subnet/subnet-08e9caeb3efa69ebf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08e9caeb3efa69ebf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "381492187662",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "stack-3tier-app-sn-1"
            },
            "tags_all": {
              "Name": "stack-3tier-app-sn-1"
            },
            "vpc_id": "vpc-09f2639068eea4a81"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app-tier-subnet-two",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:381492187662:subnet/subnet-0eaff904d64422625",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eaff904d64422625",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "381492187662",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "stack-3tier-app-sn-2"
            },
            "tags_all": {
              "Name": "stack-3tier-app-sn-2"
            },
            "vpc_id": "vpc-09f2639068eea4a81"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db-tier-subnet-one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:381492187662:subnet/subnet-0acb282e73bee6615",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0acb282e73bee6615",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "381492187662",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "stack-3tier-db-sn-1"
            },
            "tags_all": {
              "Name": "stack-3tier-db-sn-1"
            },
            "vpc_id": "vpc-09f2639068eea4a81"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db-tier-subnet-two",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:381492187662:subnet/subnet-0aa10a7b932beb448",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aa10a7b932beb448",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "381492187662",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "stack-3tier-db-sn-2"
            },
            "tags_all": {
              "Name": "stack-3tier-db-sn-2"
            },
            "vpc_id": "vpc-09f2639068eea4a81"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web-tier-subnet-one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:381492187662:subnet/subnet-0092212d2a9f5aeab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0092212d2a9f5aeab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "381492187662",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "stack-3tier-web-sn-1"
            },
            "tags_all": {
              "Name": "stack-3tier-web-sn-1"
            },
            "vpc_id": "vpc-09f2639068eea4a81"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web-tier-subnet-two",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:381492187662:subnet/subnet-01e8651201e859f08",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01e8651201e859f08",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "381492187662",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "stack-3tier-web-sn-2"
            },
            "tags_all": {
              "Name": "stack-3tier-web-sn-2"
            },
            "vpc_id": "vpc-09f2639068eea4a81"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:381492187662:vpc/vpc-09f2639068eea4a81",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-039cc79e81598ec14",
            "default_route_table_id": "rtb-00869e9a7942d9380",
            "default_security_group_id": "sg-0fc01ca8a8d9ed7a2",
            "dhcp_options_id": "dopt-05205661cd7dd8dbe",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09f2639068eea4a81",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00869e9a7942d9380",
            "owner_id": "381492187662",
            "tags": {
              "Name": "stack-3tier-vpc"
            },
            "tags_all": {
              "Name": "stack-3tier-vpc"
            }
          }
        }
      ]
    }
  ]
}